--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-interaction
+      - name: update composer
+        run: composer update
 
       - name: Execute tests
         run: vendor/bin/phpunit
