--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,20 +5,15 @@ on: [push, pull_request]
 jobs:
   tests:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+      - uses: "shivammathur/setup-php@v2"
         with:
-          php-version: 7.1
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
-          coverage: none
-
-      - name: Install Composer dependencies
-        run: composer install --ignore-platform-reqs --prefer-dist --no-scripts --no-progress --no-suggest --no-interaction --no-dev --no-autoloader --allow-plugins
-
-      - name: Execute tests
-        run: vendor/bin/phpunit
+         php-version: 7.1
+         extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
+         coverage: none
+      - uses: "ramsey/composer-install@v2"
+      
+      
+  
+  
