--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
          php-version: 7.1
          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
          coverage: none
-      - uses: "ramsey/composer-install@v2"
+      - uses: "shivammathur/composer-install@v2"
       
       
   
