--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ jobs:
          php-version: 7.1
          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
          coverage: none
-      - uses: "shivammathur/composer-install@v2"
+      - name: composer install 
+        run: composer install 
       
       
   
