--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,26 @@
-name: Tests
+name: CI
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
-  tests:
+  build-test:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - uses: "shivammathur/setup-php@v2"
+      - uses: actions/checkout@v2
+
+      - name: Install dependencies
+        uses: php-actions/composer@v6
+
         with:
-         php-version: 7.1
-         extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
-         coverage: none
-      - name: composer install 
-        run: composer install 
-      
+          php_version: '8.1'
+          ssh_key: ${{ secrets.SSH_KEY }}
+          ssh_key_pub: ${{ secrets.SSH_KEY_PUB }}
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: debug-output
+          path: output.log
       
   
   
