--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,26 @@
-name: CI
+name: Run Tests
 
-on: [push]
+on:
+  pull_request:
+    branches:
+      - master
 
 jobs:
-  build-test:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ${{ matrix.operating-system }}
+    strategy:
+      matrix:
+        operating-system: [ubuntu-latest]
+        php-versions: ['7.3']
 
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      - name: Install dependencies
-        uses: php-actions/composer@v6
-
+      - uses: shivammathur/setup-php@v2
         with:
-          php_version: '7.2'
-          ssh_key: ${{ secrets.SSH_KEY }}
-          ssh_key_pub: ${{ secrets.SSH_KEY_PUB }}
-
-      - uses: actions/upload-artifact@v2
-        with:
-          name: debug-output
-          path: output.log
+          php-version: ${{ matrix.php-versions }}
+      - uses: php-actions/composer@v2
+      - uses: php-actions/phpunit@v6
       
   
   
