--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: "7.3"
+        php-versions: ["7.3"]
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
