--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           ssh_key_pub: ${{ secrets.ssh_key_pub }}
           php_version: 7.2
       
-      - uses: php-actions/phpunit@v
+      - uses: php-actions/phpunit@v8
       
   
   
