--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,78 @@
-name: Run Tests
-on: [push]
+name: Unit Tests
 
+on:
+    pull_request: null
+
+env:
+    # see https://github.com/composer/composer/issues/9368#issuecomment-718112361
+    COMPOSER_ROOT_VERSION: "dev-master"
 
 jobs:
-  build:
-    runs-on: ${{ matrix.operating-system }}
-    strategy:
-      matrix:
-        operating-system: [ubuntu-latest]
+    provide_php_versions_json:
+        runs-on: ubuntu-latest
 
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      - uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php-versions }}
-      - uses: php-actions/composer@v5
-        with:
-          ssh_key: ${{ secrets.ssh_key }}
-          ssh_key_pub: ${{ secrets.ssh_key_pub }}
-          php_version: 7.2
-      
-      - uses: php-actions/phpunit@v8
-      
-  
+        steps:
+            # git clone + use PHP + composer install
+            -   uses: actions/checkout@v2
+            -   uses: shivammathur/setup-php@v2
+                with:
+                    php-version: 7.4
+
+            -   run: composer install --no-progress --ansi
+
+            -
+                # to see the output
+                run: packages/easy-ci/bin/easy-ci php-versions-json
+
+            # here we create the json, we need the "id:" so we can use it in "outputs" bellow
+
+            -
+                id: output_data
+                run: echo "::set-output name=matrix::$(packages/easy-ci/bin/easy-ci php-versions-json)"
+
+        # here, we save the result of this 1st phase to the "outputs"
+        outputs:
+            matrix: ${{ steps.output_data.outputs.matrix }}
+
+    unit_tests:
+        needs: provide_php_versions_json
+
+        runs-on: ubuntu-latest
+
+        strategy:
+            fail-fast: false
+            matrix:
+               php: ${{ fromJson(needs.provide_php_versions_json.outputs.matrix) }}
+
+        name: PHP ${{ matrix.php }} tests
+
+        steps:
+            -   uses: actions/checkout@v2
+            # required for "git tag" presence for changelog-linker git tags resolver; default is 1
+            # https://github.com/actions/checkout#fetch-all-tags
+            -   run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+
+            # see https://github.com/shivammathur/setup-php
+            -   uses: shivammathur/setup-php@v2
+                with:
+                    php-version: ${{ matrix.php }}
+                    coverage: none
+
+            # composer install cache - https://github.com/ramsey/composer-install
+            -
+                if: "matrix.php == 7.3"
+                run: composer update  --no-progress --ansi --prefer-lowest
+
+            -
+                if: "matrix.php == 7.4"
+                uses: "ramsey/composer-install@v1"
+
+            -
+                if: "matrix.php >= 8"
+                uses: "ramsey/composer-install@v1"
+                with:
+                    composer-options: "--ignore-platform-req php"
+
+            -
+                run: vendor/bin/phpunit
   
