--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: Unit Tests
 
-on:
-    pull_request: null
+on: [push, pull_request]
 
 env:
     # see https://github.com/composer/composer/issues/9368#issuecomment-718112361
@@ -16,7 +15,7 @@ jobs:
             -   uses: actions/checkout@v2
             -   uses: shivammathur/setup-php@v2
                 with:
-                    php-version: 7.4
+                    php-version: 7.2
 
             -   run: composer install --no-progress --ansi
 
@@ -34,45 +33,4 @@ jobs:
         outputs:
             matrix: ${{ steps.output_data.outputs.matrix }}
 
-    unit_tests:
-        needs: provide_php_versions_json
-
-        runs-on: ubuntu-latest
-
-        strategy:
-            fail-fast: false
-            matrix:
-               php: ${{ fromJson(needs.provide_php_versions_json.outputs.matrix) }}
-
-        name: PHP ${{ matrix.php }} tests
-
-        steps:
-            -   uses: actions/checkout@v2
-            # required for "git tag" presence for changelog-linker git tags resolver; default is 1
-            # https://github.com/actions/checkout#fetch-all-tags
-            -   run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
-
-            # see https://github.com/shivammathur/setup-php
-            -   uses: shivammathur/setup-php@v2
-                with:
-                    php-version: ${{ matrix.php }}
-                    coverage: none
-
-            # composer install cache - https://github.com/ramsey/composer-install
-            -
-                if: "matrix.php == 7.3"
-                run: composer update  --no-progress --ansi --prefer-lowest
-
-            -
-                if: "matrix.php == 7.4"
-                uses: "ramsey/composer-install@v1"
-
-            -
-                if: "matrix.php >= 8"
-                uses: "ramsey/composer-install@v1"
-                with:
-                    composer-options: "--ignore-platform-req php"
-
-            -
-                run: vendor/bin/phpunit
-  
+    
