--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
             -   uses: shivammathur/setup-php@v2
                 with:
                     php-version: 7.2
+            -   run: composer global self-update 
+
 
             -   run: composer install --no-progress --ansi
 
