--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,10 @@ jobs:
             -   uses: shivammathur/setup-php@v2
                 with:
                     php-version: 7.2
-            -   run: composer global self-update 
+            -   run: composer global require kylekatarnls/update-helper
 
 
+            -   run: composer install --no-progress --ansi
 
             -
                 # to see the output
