--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,6 @@ jobs:
           php_version: 7.2
           ssh_key: ${{ secrets.SSH_KEY }}
           ssh_key_pub: ${{ secrets.SSH_KEY_PUB }}
-
+      - name: Execute tests
+        run: vendor/bin/phpunit
     
