--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
           php_version: 7.2
           ssh_key: ${{ secrets.SSH_KEY }}
           ssh_key_pub: ${{ secrets.SSH_KEY_PUB }}
-      - name: Execute tests
-        run: vendor/bin/phpunit
+      - name: PHPUnit tests
+        uses: php-actions/phpunit@v3
+        with:
+          configuration: custom/path/to/phpunit.xml
+          memory_limit: 256M
     
